Smaller search field, to prevent branding overlap

--- a/app/styles/episode.css
+++ b/app/styles/episode.css
@@ -86,7 +86,7 @@
 	float:left;
 }
 .toolbar .buttongroup.searchgroup.cur {
-	width: 35%;
+	width: 27%;
 	font-size: 22px;
 	padding-top: 3px;
 }
